# ncd_classifier

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: JGLUE_MARC_ja.py  ag_news.py  livedoor_news_ja.py  sst2.py
src/ncd_classifier/: __init__.py  compressors.py  ncd_classifier.py
src/npc_classifier/: __init__.py  compressors.py  npc_classifier.py
tests/: test_ncd_classifier.py  test_npc_classifier.py
