[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.5.0"]

[tool.poetry]
authors = ["Your Name <your.email@example.com>"]
description = "Normalized Compression Distance based Classifier"
name = "npc-classifier"
packages = [
  {include = "npc_classifier", from = "src"},
]
version = "0.1.0"

[tool.poetry.dependencies]
joblib = "^1.0.1"
numpy = "^1.21.2"
python = "^3.8"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.group.dev.dependencies]
datasets = "^2.13.1"

